--- a/src/FantasyFootball/Resources/AppResources.resx
+++ b/src/FantasyFootball/Resources/AppResources.resx
@@ -165,6 +165,9 @@
   <data name="Games" xml:space="preserve">
     <value>Games</value>
   </data>
+  <data name="Go" xml:space="preserve">
+    <value>Go!</value>
+  </data>
   <data name="GoalDifference" xml:space="preserve">
     <value>+/-</value>
   </data>
@@ -177,6 +180,9 @@
   <data name="GroupStage" xml:space="preserve">
     <value>Group Stage</value>
   </data>
+  <data name="Historic" xml:space="preserve">
+    <value>Historic</value>
+  </data>
   <data name="InProgress" xml:space="preserve">
     <value>In Progress ...</value>
   </data>
@@ -185,6 +191,9 @@
   </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
+  </data>
+  <data name="ManualSelection" xml:space="preserve">
+    <value>Manual Selection</value>
   </data>
   <data name="Multiple" xml:space="preserve">
     <value>Multiple</value>
@@ -254,5 +263,8 @@
   </data>
   <data name="WorldCup" xml:space="preserve">
     <value>World Cup</value>
+  </data>
+  <data name="Year" xml:space="preserve">
+    <value>Year</value>
   </data>
 </root>
