--- a/src/FantasyFootball/Resources/AppResources.de.resx
+++ b/src/FantasyFootball/Resources/AppResources.de.resx
@@ -163,6 +163,9 @@
     <value>n.E.</value>
   </data>
   <data name="Games" xml:space="preserve">
+    <value>Spiele</value>
+  </data>
+  <data name="GamesShort" xml:space="preserve">
     <value>Sp.</value>
   </data>
   <data name="Go" xml:space="preserve">
@@ -205,6 +208,9 @@
     <value>Australien und Ozeanien</value>
   </data>
   <data name="Points" xml:space="preserve">
+    <value>Punkte</value>
+  </data>
+  <data name="PointsShort" xml:space="preserve">
     <value>Pkt.</value>
   </data>
   <data name="PPG" xml:space="preserve">
