--- a/src/FantasyFootball/Resources/AppResources.de.resx
+++ b/src/FantasyFootball/Resources/AppResources.de.resx
@@ -195,6 +195,9 @@
   <data name="Language" xml:space="preserve">
     <value>Sprache</value>
   </data>
+  <data name="Loser" xml:space="preserve">
+    <value>Verlierer</value>
+  </data>
   <data name="ManualSelection" xml:space="preserve">
     <value>Auswahl</value>
   </data>
@@ -258,8 +261,14 @@
   <data name="Teams" xml:space="preserve">
     <value>Teams</value>
   </data>
+  <data name="ThirdPlaceMatch" xml:space="preserve">
+    <value>Spiel um Platz 3</value>
+  </data>
   <data name="WC" xml:space="preserve">
     <value>WM</value>
+  </data>
+  <data name="Winner" xml:space="preserve">
+    <value>Sieger</value>
   </data>
   <data name="WithDrawing" xml:space="preserve">
     <value>Auslosung</value>
