--- a/src/FantasyFootball/Resources/AppResources.resx
+++ b/src/FantasyFootball/Resources/AppResources.resx
@@ -195,6 +195,9 @@
   <data name="Language" xml:space="preserve">
     <value>Language</value>
   </data>
+  <data name="Loser" xml:space="preserve">
+    <value>Loser</value>
+  </data>
   <data name="ManualSelection" xml:space="preserve">
     <value>Manual Selection</value>
   </data>
@@ -258,8 +261,14 @@
   <data name="Teams" xml:space="preserve">
     <value>Teams</value>
   </data>
+  <data name="ThirdPlaceMatch" xml:space="preserve">
+    <value>Third Place Match</value>
+  </data>
   <data name="WC" xml:space="preserve">
     <value>WC</value>
+  </data>
+  <data name="Winner" xml:space="preserve">
+    <value>Winner</value>
   </data>
   <data name="WithDrawing" xml:space="preserve">
     <value>Random Teams</value>
