--- a/src/FantasyFootball/Resources/AppResources.de.resx
+++ b/src/FantasyFootball/Resources/AppResources.de.resx
@@ -141,6 +141,9 @@
   <data name="Competitions" xml:space="preserve">
     <value>Wettbewerbe</value>
   </data>
+  <data name="Drawing" xml:space="preserve">
+    <value>Auslosung</value>
+  </data>
   <data name="EC" xml:space="preserve">
     <value>EM</value>
   </data>
@@ -186,9 +189,6 @@
   <data name="GroupStage" xml:space="preserve">
     <value>Gruppenphase</value>
   </data>
-  <data name="Historic" xml:space="preserve">
-    <value>Historisch</value>
-  </data>
   <data name="InProgress" xml:space="preserve">
     <value>In Simulation ...</value>
   </data>
@@ -212,6 +212,9 @@
   </data>
   <data name="Oceania" xml:space="preserve">
     <value>Australien und Ozeanien</value>
+  </data>
+  <data name="Original" xml:space="preserve">
+    <value>Original</value>
   </data>
   <data name="Points" xml:space="preserve">
     <value>Punkte</value>
@@ -272,9 +275,6 @@
   </data>
   <data name="Winner" xml:space="preserve">
     <value>Sieger</value>
-  </data>
-  <data name="WithDrawing" xml:space="preserve">
-    <value>Auslosung</value>
   </data>
   <data name="Won" xml:space="preserve">
     <value>Gew.</value>
